--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,15 @@ spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.database.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/nosso_banco_digital
 spring.datasource.username=postgres
 spring.datasource.password=docker
-server.port=8080
+server.port=4000
 
 spring.servlet.multipart.max-file-size=5000KB
 spring.servlet.multipart.max-request-size=5000KB
 
-spring.resources.static-locations=file:/tmp/uploads
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=dc2c0bc8f56b30
+spring.mail.password=ff04a933d9b559
